Bug 209127 - 'Display' name not displayed properly when printing
Summary: 'Display' name not displayed properly when printing
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-01 19:06 UTC by Sabine Faure
Modified: 2009-11-10 00:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-10-01 19:06:50 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kontact and go to KAB
- Create three contacts (Celine Vivelevent, Helene Duchateau, John Smith)
- Create an additional contact (Don Toto)
- Right click in the 'display' line edit and select 'reverse name'
- Click on 'Ok'
- Select all the contacts and go to File menu/Print
- Select 'print to File (PDF)'
- choose a name and location for the file
- Click on 'Print'
- choose 'Selected contacts' and click on 'Next'
- choose 'Formatted name' as a criterion and click on 'Next'
- Click on 'Finish'

Open the .pdf you've created. In it, Don Toto is at the end of the list since it has been sorted according to its surname. However it is displayed as 'Don Toto' and not as 'Toto Don' as one would expect.

Also it is confusing to set the 'Display' name when creating a contact and then to have to select the 'formatted name' from the printing assistant.
If they are the same functionality then it would make sense that there would be only one name for it.

Trunk, Svn Rev 1030016
Comment 1 Tobias Koenig 2009-11-06 17:49:11 UTC
SVN commit 1045703 by tokoe:

Use the display name in the headers for Detailed and Mike
printing style (#209127) and use display name (formatted name) as default
sort field as well (fixes #213282).
The RingBinder style still uses the format 'FamilyName, GivenName' since
that's the default format for ringbinders ;)

BUG: 209127
BUG: 213282


 M  +2 -1      detailledstyle.cpp  
 M  +2 -1      mikesstyle.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1045703
Comment 2 Sabine Faure 2009-11-10 00:17:11 UTC
It is corrected now.

It is now possible to print in the same order than the one displayed in the 'Name' column.

However, the there is still two different names for the same functionality :
-'Display Name' to sort in the 'Name' column
-'Formatted Name' for printing
But, the 'Formatted Name' is now set by default for two of the printing styles (detailled style and Mike's printing style).

Trunk, Svn Rev 1046648