Use the display name in the headers for Detailed and Mike printing style (#209127) and use display name (formatted name) as default sort field as well (fixes #213282). The RingBinder style still uses the format 'FamilyName, GivenName' since that's the default format for ringbinders ;)

BUG: 209127
BUG: 213282

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1045703